maked the data cleaning only with numerically data

--- a/data-exploration/immo_eliza_data_exploration.ipynb
+++ b/data-exploration/immo_eliza_data_exploration.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -753,7 +753,7 @@
        "[18171 rows x 22 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -981,7 +981,7 @@
        "10616966                           238.0       2500.00  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1000,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1037,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1046,23 +1046,33 @@
        "(11316, 14)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "immo = immo[['price', 'floor', 'bedroomCount', 'netHabitableSurface', \n",
-    "            'constructionYear', 'facadeCount', 'floorCount', 'bathroomCount', \n",
-    "            'showerRoomCount', 'toiletCount', 'parkingCountIndoor', 'parkingCountOutdoor', \n",
-    "            'primaryEnergyConsumptionPerSqm', 'price_per_sm']]\n",
+    "immo = immo.drop(columns=['gardenSurface', 'terraceSurface', 'land', 'parkingCountClosedBox'])\n",
     "\n",
     "immo.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#validate duplicates values\n",
+    "duplicate = immo[immo.duplicated(keep='first')]\n",
+    "\n",
+    "if len(duplicate) > 0:\n",
+    "    immo = immo.drop(duplicate.index[:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
