implementing random forest regressor

--- a/model-building/immo_eliza_data_building_tree.ipynb
+++ b/model-building/immo_eliza_data_building_tree.ipynb
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -471,10 +471,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "91808.38155047716\n",
-      "0.9499092528153896\n",
-      "230998.53276747736\n",
-      "0.6688363367545525\n"
+      "91642.45595207531\n",
+      "0.950090147555213\n",
+      "230906.55052415308\n",
+      "0.6691000190520817\n"
      ]
     }
    ],
@@ -483,12 +483,12 @@
     "\n",
     "#RF model\n",
     "model_rf = RandomForestRegressor(n_estimators=500, oob_score=True, random_state=100)\n",
-    "model_rf.fit(normalized_x_train, y_train) \n",
-    "pred_train_rf= model_rf.predict(normalized_x_train)\n",
+    "model_rf.fit(X_train, y_train) \n",
+    "pred_train_rf= model_rf.predict(X_train)\n",
     "print(np.sqrt(mean_squared_error(y_train,pred_train_rf)))\n",
     "print(r2_score(y_train, pred_train_rf))\n",
     "\n",
-    "pred_test_rf = model_rf.predict(normalized_x_test)\n",
+    "pred_test_rf = model_rf.predict(X_test)\n",
     "print(np.sqrt(mean_squared_error(y_test,pred_test_rf)))\n",
     "print(r2_score(y_test, pred_test_rf))"
    ]
